Quorum3/Library/Tests/TypeChecker/Pass/NumberGetText.quorum
class Main
    action Main
        Number t 
        t:SetValue(5.2)
        number p = 5.2

        output t:GetText()
        output p:GetText()
    end
end