Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextNumberWrapped.quorum
class main
    action Main
        text t = 7.5
    end
end